--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,4 +8,8 @@ services:
       dockerfile: prod.Dockerfile
       args:
         ENV_VARIABLE: ${ENV_VARIABLE}
-        NEXT_P
+        NEXT_PUBLIC_ENV_VARIABLE: ${NEXT_PUBLIC_ENV_VARIABLE}
+    restart: always
+    ports:
+      - 3000:3000
+    networks:
