--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,3 +13,8 @@ services:
     ports:
       - 3000:3000
     networks:
+      - biogpt_network
+
+  # Add more containers below (nginx, postgres, etc.)
+
+# Define a network, whic
