--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,4 +17,7 @@ services:
 
   # Add more containers below (nginx, postgres, etc.)
 
-# Define a network, whic
+# Define a network, which allows containers to communicate
+# with each other, by using their container name as a hostname
+networks:
+  bio
