--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -20,4 +20,5 @@ services:
 # Define a network, which allows containers to communicate
 # with each other, by using their container name as a hostname
 networks:
-  bio
+  biogpt_network:
+    external: true
