--- a/package.json
+++ b/package.json
@@ -2,4 +2,9 @@
   "name": "bipgpt",
   "version": "1.0.0",
   "description": "bio generator to social media",
-  "private"
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "yarn run
