--- a/package.json
+++ b/package.json
@@ -13,3 +13,6 @@
     "@headlessui/react": "^1.7.7",
     "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^2.0.13",
+    "@langchain/openai": "^0.0.33",
+    "@radix-ui/react-select": "^2.0.0",
+    "@tailwindcss/forms": "^0.
