--- a/package.json
+++ b/package.json
@@ -15,4 +15,8 @@
     "@heroicons/react": "^2.0.13",
     "@langchain/openai": "^0.0.33",
     "@radix-ui/react-select": "^2.0.0",
-    "@tailwindcss/forms": "^0.
+    "@tailwindcss/forms": "^0.5.3",
+    "@vercel/analytics": "^0.1.8",
+    "@vercel/speed-insights": "^1.0.11",
+    "axios": "^1.4.0",
+ 
