--- a/package.json
+++ b/package.json
@@ -19,4 +19,7 @@
     "@vercel/analytics": "^0.1.8",
     "@vercel/speed-insights": "^1.0.11",
     "axios": "^1.4.0",
- 
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "eventsource-parser": "^0.0.5",
+    "langchain": "^0.2.2",
