--- a/package.json
+++ b/package.json
@@ -23,3 +23,8 @@
     "clsx": "^2.1.0",
     "eventsource-parser": "^0.0.5",
     "langchain": "^0.2.2",
+    "lucide-react": "^0.303.0",
+    "next": "^14.0.4",
+    "next-themes": "^0.3.0",
+    "openai": "^3.2.1",
+    "react": "18.2
