--- a/package.json
+++ b/package.json
@@ -31,3 +31,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.0",
     "react-hot-toast": "^2.4.0",
+    "react-use-measure": "^2.1.1",
+    "sonner": "^1.4.41",
+    "tailwind-merge": "^2.2.0",
+    "tailwind
