--- a/package.json
+++ b/package.json
@@ -44,4 +44,6 @@
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.4",
-    "typescript"
+    "typescript": "4.9.4"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7a
