--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,2 +1,9 @@
 {
-  "co
+  "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "
