--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,4 +6,8 @@
       "dom.iterable",
       "esnext"
     ],
-    "
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit
