--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,4 +21,11 @@
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "react": [
+        "./node_modules/@types/react"
+      ]
+    },
+    "plugins": [
+      {
     
