--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,4 +34,12 @@
   },
   "include": [
     "next-env.d.ts",
-    "environment.d.ts"
+    "environment.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
+}
